--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/backmeupplz/farcaster-follow-back",
   "author": "backmeupplz <backmeupplz@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "distribute": "yarn build && node dist/app.js",
     "start": "tsc-watch --skipLibCheck --onSuccess 'node dist/app.js'",
@@ -14,29 +15,25 @@
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.4",
+    "@types/inquirer": "^9.0.3",
+    "@types/node": "^18.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-no-relative-import-paths": "^1.5.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "module-alias": "^2.2.2",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "tsc-watch": "^6.0.0",
-    "typescript": "^4.9.4"
-  },
-  "_moduleAliases": {
-    "@": "dist"
+    "typescript": "^4.9.5"
   },
   "packageManager": "yarn@3.3.1",
   "dependencies": {
-    "@standard-crypto/farcaster-js": "^5.5.1",
-    "@types/prompt": "^1.1.4",
+    "@standard-crypto/farcaster-js": "^5.5.3",
     "ethers": "^5.7.2",
-    "prompt": "^1.3.0"
+    "inquirer": "^9.1.4"
   }
 }
