--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
+    "module": "esnext",
+    "target": "es2017",
     "lib": ["es2015"],
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": "src",
-    "paths": {
-      "@/*": ["*"]
-    },
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strict": true
